fix(browser): wrong padding space

--- a/browser/src/views/ScannerPage.module.less
+++ b/browser/src/views/ScannerPage.module.less
@@ -1,5 +1,4 @@
 .root {
-  margin-bottom: 68px;
   overflow-y: scroll;
 }
 
